fix display of footer on mobile embed page

--- a/sass/give.scss
+++ b/sass/give.scss
@@ -28,7 +28,9 @@ body {
 }
 
 .embed-main {
-  height: $embed-body-height;
+  @media (min-width: $breakpoint-md) {
+    height: $embed-body-height;
+  }
 }
 
 footer {
